--- a/Acvarium/Properties/Resources.resx
+++ b/Acvarium/Properties/Resources.resx
@@ -133,4 +133,10 @@
   <data name="fish4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fish4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fish5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fish5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fish6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fish6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
